Feat: add favicon, fonts for project

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,17 +1,8 @@
 @font-face {
-  font-family: 'Futura Book';
+  font-family: 'ubuntu';
   src: 
-  url('../fonts/futura/FuturaBookC.woff') format('woff'),
-  url('../fonts/futura/FuturaBookC.woff2') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Futura Demi';
-  src: 
-  url('../fonts/futura/FuturaDemiC.woff') format('woff'),
-  url('../fonts/futura/FuturaDemiC.woff2') format('woff');
+  url('../fonts/ubuntu/ubuntu.woff') format('woff'),
+  url('../fonts/ubuntu/ubuntu.woff2') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
