--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,6 @@
 @font-face {
-  font-family: 'Futura Book';
-  src: url("../fonts/futura/FuturaBookC.woff") format("woff"), url("../fonts/futura/FuturaBookC.woff2") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap; }
-
-@font-face {
-  font-family: 'Futura Demi';
-  src: url("../fonts/futura/FuturaDemiC.woff") format("woff"), url("../fonts/futura/FuturaDemiC.woff2") format("woff");
+  font-family: 'ubuntu';
+  src: url("../fonts/ubuntu/ubuntu.woff") format("woff"), url("../fonts/ubuntu/ubuntu.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap; }
@@ -337,10 +330,10 @@ template {
   box-sizing: border-box; }
 
 html {
-  font-size: 14px; }
+  font-size: 16px; }
 
 body {
-  font-family: 'Futura Book', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 1rem; }
 
 a {
@@ -483,3 +476,33 @@ img {
     text-align: center;
     margin: 0;
     margin-bottom: 2.428rem; }
+
+@media screen and (max-width: 1450px) {
+  body {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1rem; } }
+
+@media screen and (max-width: 1250px) {
+  body {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1rem; } }
+
+@media screen and (max-width: 994px) {
+  body {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1rem; } }
+
+@media screen and (max-width: 760px) {
+  body {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1rem; } }
+
+@media screen and (max-width: 570px) {
+  body {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1rem; } }
+
+@media screen and (max-height: 520px) {
+  body {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1rem; } }
