--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,24 @@
 @media screen and ( max-width: 1450px )
+  body
+    font-family: 'Ubuntu', sans-serif
+    font-size: 1rem
 @media screen and ( max-width: 1250px )
+  body
+    font-family: 'Ubuntu', sans-serif
+    font-size: 1rem
 @media screen and ( max-width: 994px )
+  body
+    font-family: 'Ubuntu', sans-serif
+    font-size: 1rem
 @media screen and ( max-width: 760px )
+  body
+    font-family: 'Ubuntu', sans-serif
+    font-size: 1rem
 @media screen and ( max-width: 570px )
+  body
+    font-family: 'Ubuntu', sans-serif
+    font-size: 1rem
 @media screen and ( max-height: 520px )
+  body
+    font-family: 'Ubuntu', sans-serif
+    font-size: 1rem
