--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,9 +1,9 @@
 *, *:before, *:after
   box-sizing: border-box
 html
-  font-size: 14px
+  font-size: 16px
 body
-  font-family: 'Futura Book', sans-serif
+  font-family: 'Ubuntu', sans-serif
   font-size: 1rem
 a
   text-decoration: none
