feat: add header

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,6 +1,5 @@
-$dark: #131313
-$black: #181818
+$dark: #2c2c2d
+$black: #323232
 $light: #fff
-$primary: #E3B873
-$secondary: #959595
-$tird: #363636
+$primary: #ff5a3c
+$secondary: #38393b
