--- a/css/style.css
+++ b/css/style.css
@@ -311,8 +311,25 @@ template {
 [hidden] {
   display: none; }
 
+.button {
+  font-family: 'ubuntu', sans-serif;
+  box-sizing: border-box;
+  border: none;
+  box-shadow: none;
+  outline: none;
+  padding: 0.218rem 2.062rem;
+  border-radius: 22px; }
+  .button:hover {
+    cursor: pointer; }
+  .button--primary {
+    color: #fff;
+    background-color: #ff5a3c;
+    box-shadow: none;
+    font-weight: 500;
+    line-height: 37.33px; }
+
 .container {
-  width: 75%;
+  width: 67%;
   margin: auto; }
 
 .row {
@@ -349,6 +366,65 @@ img {
 ::-moz-placeholder, :-moz-placeholder {
   opacity: 1; }
 
+header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  background-color: transparent;
+  padding: 1.85rem 5.5rem; }
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .menu__logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .menu__logo__text {
+      color: #38393b;
+      text-transform: uppercase;
+      font-size: 1.625rem;
+      font-weight: 700;
+      letter-spacing: 1.7px;
+      line-height: 1.187rem;
+      margin-left: 0.812rem;
+      transition: 0.4s; }
+      .menu__logo__text:hover {
+        color: #ff5a3c; }
+
+.nav {
+  margin-left: 11.2rem; }
+  .nav__item {
+    position: relative;
+    color: #38393b;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 300;
+    line-height: 1.8rem;
+    margin-right: 1.25rem; }
+    .nav__item:hover::after {
+      content: '';
+      position: absolute;
+      top: 100%;
+      left: 10%;
+      margin-top: 0.5rem;
+      background: #ff5a3c;
+      width: 80%;
+      height: 2px; }
+
+.contacts__phone {
+  color: #38393b;
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 2.33rem;
+  margin-right: 2.8rem;
+  transition: 0.4s; }
+  .contacts__phone:hover {
+    color: #ff5a3c; }
+
 .modal {
   opacity: 0;
   visibility: hidden;
@@ -360,7 +436,7 @@ img {
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(19, 19, 19, 0.6);
+  background-color: rgba(44, 44, 45, 0.6);
   display: flex;
   align-items: center;
   justify-content: center; }
@@ -370,7 +446,7 @@ img {
   .modal__dialog {
     position: relative;
     max-width: 40rem;
-    background: #131313 url("../img/bg-lines.svg") no-repeat center/cover;
+    background: #2c2c2d url("../img/bg-lines.svg") no-repeat center/cover;
     padding: 2.49rem 3.8rem 1.928rem;
     color: #fff; }
   .modal__close {
@@ -447,7 +523,7 @@ img {
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(19, 19, 19, 0.6);
+  background-color: rgba(44, 44, 45, 0.6);
   display: flex;
   align-items: center;
   justify-content: center; }
@@ -457,7 +533,7 @@ img {
   .modal__success__dialog {
     position: relative;
     max-width: 36.36rem;
-    background: #131313 url("../img/bg-lines.svg") no-repeat center;
+    background: #2c2c2d url("../img/bg-lines.svg") no-repeat center;
     padding: 2.357rem 3.5rem 1.928rem;
     color: #fff; }
   .modal__success__close {
