--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -14,5 +14,7 @@
     box-shadow: none
     font-weight: 500
     line-height: 37.33px
+    &:hover
+      box-shadow: 0px 5px 15px rgba($primary, 0.2)
       
       
