--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,7 @@
 @import 'settings'
 @import 'templates/header'
 @import 'templates/hero'
+@import 'templates/statistics'
 @import 'templates/modal'
 @import 'templates/footer'
 @import 'templates/modalsuccess'
