--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -2,13 +2,13 @@
   position: relative
   display: flex
   flex-direction: column
-  background: $light url('../img/hero/hero_bg.png') no-repeat top left / cover
+  background: $light url('../img/hero/hero_bg.png') no-repeat top left / contain
   width: 100%
   height: 100vh
   min-height: 52.31rem
   color: $black
   padding-top: 6.562rem
-  padding-bottom: 26.31rem
+  padding-bottom: 75rem
   &__content
     max-width: 40rem
     z-index: 3
@@ -50,6 +50,7 @@
   justify-content: flex-end
   align-items: center
   margin-left: 3.8rem
+  margin-bottom: 12rem
   &::before
       position: absolute
       content: ''
