--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -2,17 +2,17 @@
   position: relative
   display: flex
   flex-direction: column
-  background: $light url('../img/hero/hero_bg.png') no-repeat top left / contain
-  width: 100%
+  background: $light url('../img/hero/hero_bg.png') no-repeat top left
   height: 100vh
   min-height: 52.31rem
   color: $black
   padding-top: 6.562rem
-  padding-bottom: 75rem
+  padding-bottom: 69rem
   &__content
     max-width: 40rem
     z-index: 3
     margin-top: 18rem
+    margin-left: 3.5rem
     margin-bottom: 10rem
   &__title
     font-size: 3.875‬rem
@@ -50,7 +50,7 @@
   justify-content: flex-end
   align-items: center
   margin-left: 3.8rem
-  margin-bottom: 12rem
+  margin-bottom: 15.5rem
   &::before
       position: absolute
       content: ''
