--- a/sass/templates/_statistics.sass
+++ b/sass/templates/_statistics.sass
@@ -2,17 +2,20 @@
   position: relative
   width: 100%
   min-height: 39.56rem
-  background: $light url('/img/statistics/video-bg.jpg') no-repeat center / cover
+  background: $light url('../img/statistics/video-bg.jpg') no-repeat center / cover
   &__description
     position: absolute
     display: flex
-    justify-content: space-around
+    justify-content: space-between
     align-items: center
+    margin-left: 3rem
+    margin-top: -9.3rem
+    padding: 7rem 2rem
     width: 73.06rem
+    max-width: 80%
     min-height: 20.18rem
-    background: $light url('/img/statistics/bg.png') no-repeat center
+    background: $light url('../img/statistics/bg.png') no-repeat center
     box-shadow: 0 0 22px 5px rgba(34, 34, 34, 0.05)
-    margin-top: -8rem
   &__item
     &--title
       color: $primary
