--- a/css/style.css
+++ b/css/style.css
@@ -341,10 +341,11 @@ template {
 .row {
   display: flex;
   align-items: flex-start;
-  justify-content: space-around; }
+  justify-content: space-around;
+  flex-wrap: wrap; }
 
 .col-30 {
-  flex-basis: 33%; }
+  flex-basis: 30%; }
 
 .col-50 {
   flex-basis: 50%; }
@@ -371,6 +372,19 @@ img {
 
 ::-moz-placeholder, :-moz-placeholder {
   opacity: 1; }
+
+.section__title {
+  color: #2c2c2d;
+  font-size: 1.812rem;
+  font-weight: 700;
+  line-height: 2.33rem;
+  text-align: center; }
+
+.section__description {
+  color: #2c2c2d;
+  font-weight: 400;
+  line-height: 1.375rem;
+  text-align: center; }
 
 header {
   position: fixed;
@@ -548,6 +562,40 @@ header {
     margin-top: 17%;
     margin-left: 46%; }
 
+.avantage__title {
+  margin-top: 5rem;
+  margin-bottom: 2rem; }
+
+.avantage__description {
+  max-width: 49.81rem;
+  margin: auto;
+  margin-bottom: 4rem; }
+
+.avantage__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  height: 182px;
+  margin-bottom: 5rem; }
+  .avantage__card-title {
+    display: block;
+    color: #2c2c2d;
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 2.33rem; }
+  .avantage__card-text {
+    display: block;
+    color: #38393b;
+    font-weight: 300;
+    line-height: 1.375rem;
+    text-align: center;
+    max-width: 18rem; }
+  .avantage__card-image {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 1rem; }
+
 .modal {
   opacity: 0;
   visibility: hidden;
@@ -707,9 +755,9 @@ header {
     display: none; }
   .social {
     display: none; }
-  .col-50 {
+  .col-30 {
     width: 100%;
-    flex-basis: 100%; }
+    flex-basis: 50%; }
   header {
     background: #fff; }
   .hero {
