--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -5,8 +5,9 @@
   display: flex
   align-items: flex-start
   justify-content: space-around
+  flex-wrap: wrap
 .col
   &-30
-    flex-basis: 33%
+    flex-basis: 30%
   &-50
     flex-basis: 50%
