--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -15,6 +15,19 @@ img
 // Fix placeholder color in Firefox 19+ and Firefox 18-
 ::-moz-placeholder, :-moz-placeholder
     opacity: 1
+.section
+  &__title
+    color: $dark
+    font-size: 1.812rem
+    font-weight: 700
+    line-height: 2.33rem
+    text-align: center
+  &__description
+    color: $dark
+    font-weight: 400
+    line-height: 1.375rem
+    text-align: center
+
 
 
 
