--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -16,12 +16,20 @@
     padding: 1.85rem 2rem
   .nav
     margin-left: 2rem
+  .services
+    &__card
+      margin-left: 1rem
+      margin-right: 1rem
 @media screen and ( max-width: 1250px )
   html
     font-size: 12px
   .nav
     &__item
       margin-right: 1rem
+  .services
+    &__card
+      width: 90%
+      height: 25rem
 @media screen and ( max-width: 994px )
   .nav
     display: none
@@ -31,6 +39,9 @@
     &-30
       width: 100%
       flex-basis: 50%
+  .col-30__services
+    width: 100%
+    flex-basis: 50%
   header
     background: $light
   .hero
@@ -49,6 +60,15 @@
 @media screen and ( max-width: 760px )
   .container
     width: 95%
+  .row__services
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: space-around
+    margin: auto
+  .col-30__services
+    width: 80%
+    flex-basis: 90%
   .hero
     background: $light
     padding-bottom: 5rem
@@ -60,6 +80,10 @@
       position: absolute
       margin-top: 25%
       margin-left: 43%
+  .services
+    &__card
+      margin-left: 0
+      margin-right: 0
 @media screen and ( max-width: 570px )
   .contacts
     &__button
@@ -69,6 +93,8 @@
       position: absolute
       margin-top: 30%
       margin-left: 41%
+  .avantage
+    display: none
 @media screen and ( max-height: 520px )
   body
     font-family: 'Ubuntu', sans-serif
