--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,7 @@
 @import 'templates/hero'
 @import 'templates/statistics'
 @import 'templates/avantage'
+@import 'templates/services'
 @import 'templates/modal'
 @import 'templates/footer'
 @import 'templates/modalsuccess'
