--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,7 @@
 @import 'templates/statistics'
 @import 'templates/avantage'
 @import 'templates/services'
+@import 'templates/prices'
 @import 'templates/modal'
 @import 'templates/footer'
 @import 'templates/modalsuccess'
