--- a/sass/templates/_modalsuccess.sass
+++ b/sass/templates/_modalsuccess.sass
@@ -10,7 +10,7 @@
     right: 0
     width: 100%
     height: 100%
-    background-color: rgba($dark, 0.6)
+    background-color: rgba($light, 0.6)
     display: flex
     align-items: center
     justify-content: center
@@ -20,21 +20,19 @@
     &__dialog
       position: relative
       max-width: 36.36rem
-      background: $dark url('../img/bg-lines.svg') no-repeat center
       padding: 2.357rem 3.5rem 1.928rem
-      color: $light
+      color: $dark
     &__close
       position: absolute
       right: 0
       top: 0
-      width: 28px
-      height: 28px
-      background: transparent url('../img/close.svg') no-repeat center
+      width: 35px
+      height: 35px
+      background: transparent url('../img/close.png') no-repeat center
       border: none
       margin: 12px
       cursor: pointer
     &__title
-      font-family: 'Yeseva One', cursive
       font-size: 1.357rem
       text-align: center
       margin: 0
