--- a/sass/templates/_prices.sass
+++ b/sass/templates/_prices.sass
@@ -41,6 +41,7 @@
     padding-bottom: 5px
     border: none
     border-bottom: 1px solid $third
+    background: transparent
     &::placeholder
       color: $dark
       font-size: 1.125rem
