--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -19,5 +19,9 @@
       border: 2px solid $primary
       background: $light
       color: $primary
+  &__link
+    color: $light
+    &:hover
+      color: $primary
       
       
