--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -28,8 +28,13 @@
       margin-right: 1rem
   .services
     &__card
-      width: 90%
+      width: 95%
       height: 25rem
+  .prices
+    &__form
+      width: 90%
+    &__wrap
+      background: $back
 @media screen and ( max-width: 994px )
   .nav
     display: none
