feat: add feedback form

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -12,11 +12,24 @@
     background-color: $primary
     border: 2px solid $primary
     box-shadow: none
-    font-weight: 500
+    font-weight: 600
     line-height: 37.33px
     transition: 0.5s
     &:hover
       border: 2px solid $primary
+      background: $light
+      color: $primary
+  &--light
+    color: $primary
+    background-color: $light
+    border: none
+    box-shadow: none
+    font-weight: 600
+    line-height: 37.33px
+    border-radius: 25px
+    transition: 0.5s
+    padding: 0.5rem 4em
+    &:hover
       background: $light
       color: $primary
   &__link
