--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -44,6 +44,13 @@
     &-30
       width: 100%
       flex-basis: 50%
+    &-50
+      width: 100%
+      flex-basis: 100%
+      &__primary
+        background: $primary
+        padding: 3rem
+        margin-top: 3rem
   .col-30__services
     width: 100%
     flex-basis: 50%
@@ -62,6 +69,14 @@
       position: absolute
       margin-top: 25%
       margin-left: 43%
+  .feedback
+    background: $light
+    padding-bottom: 0
+    &__title
+      margin: auto
+      margin-bottom: 2rem
+    &__description
+      justify-content: center
 @media screen and ( max-width: 760px )
   .container
     width: 95%
