--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,7 +10,7 @@
 @import 'templates/avantage'
 @import 'templates/services'
 @import 'templates/prices'
-@import 'templates/modal'
+@import 'templates/feedback'
 @import 'templates/footer'
 @import 'templates/modalsuccess'
 @import 'media'
