--- a/css/style.css
+++ b/css/style.css
@@ -326,11 +326,24 @@ template {
     background-color: #ff5a3c;
     border: 2px solid #ff5a3c;
     box-shadow: none;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 37.33px;
     transition: 0.5s; }
     .button--primary:hover {
       border: 2px solid #ff5a3c;
+      background: #fff;
+      color: #ff5a3c; }
+  .button--light {
+    color: #ff5a3c;
+    background-color: #fff;
+    border: none;
+    box-shadow: none;
+    font-weight: 600;
+    line-height: 37.33px;
+    border-radius: 25px;
+    transition: 0.5s;
+    padding: 0.5rem 4em; }
+    .button--light:hover {
       background: #fff;
       color: #ff5a3c; }
   .button__link {
@@ -389,6 +402,10 @@ img {
   font-weight: 400;
   line-height: 1.375rem;
   text-align: center; }
+
+p {
+  margin: 0;
+  margin-bottom: 1rem; }
 
 header {
   position: fixed;
@@ -728,92 +745,102 @@ ep {
   bottom: 0;
   right: 0; }
 
-.modal {
-  opacity: 0;
-  visibility: hidden;
-  position: fixed;
-  z-index: 199;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(44, 44, 45, 0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-  .modal--visible {
-    opacity: 1;
-    visibility: visible; }
-  .modal__dialog {
-    position: relative;
-    max-width: 40rem;
-    background: #2c2c2d url("../img/bg-lines.svg") no-repeat center/cover;
-    padding: 2.49rem 3.8rem 1.928rem;
-    color: #fff; }
-  .modal__close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 33px;
-    height: 33px;
-    background: transparent url("../img/close.svg") no-repeat center;
-    border: none;
-    margin: 0.9rem;
-    cursor: pointer; }
-  .modal__title {
-    font-family: 'Yeseva One', cursive;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 2.1rem;
-    text-align: center;
-    margin: 0; }
-  .modal__form {
+.feedback {
+  background: #fff url("../img/form-bg.jpg") no-repeat center/cover;
+  padding-top: 6.4rem;
+  padding-bottom: 6.4rem; }
+  .feedback__title {
+    color: #38393b;
+    width: 29.43rem;
+    font-size: 2.25rem;
+    font-weight: 700;
+    line-height: 3.66rem;
+    margin-bottom: 3.06rem; }
+  .feedback__link {
+    color: #ff5a3c;
+    position: relative; }
+    .feedback__link::after {
+      position: absolute;
+      content: '';
+      width: 100%;
+      height: 1px;
+      background: #ff5a3c;
+      bottom: 0;
+      right: 0; }
+  .feedback__description {
     display: flex;
-    flex-direction: column; }
-  .modal__input--light::-webkit-input-placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.285rem;
-    line-height: 1.714rem;
-    color: #fff; }
-  .modal__input--light::-moz-placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.285rem;
-    line-height: 1.714rem;
-    color: #fff; }
-  .modal__input--light:-ms-input-placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.285rem;
-    line-height: 1.714rem;
-    color: #fff; }
-  .modal__input--light::-ms-input-placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.285rem;
-    line-height: 1.714rem;
-    color: #fff; }
-  .modal__input--light::placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.285rem;
-    line-height: 1.714rem;
-    color: #fff; }
-  .modal__input-group {
+    color: #38393b;
+    font-size: 1.125rem;
+    font-weight: 300;
+    line-height: 0.958rem; }
+    .feedback__description__item {
+      margin-right: 2.375rem; }
+    .feedback__description__link {
+      color: #38393b; }
+  .feedback__strong {
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 2.33rem; }
+  .feedback__form {
     display: flex;
     flex-direction: column;
-    margin-top: 2.3rem;
-    margin-bottom: 1.3rem; }
-  .modal__policy {
-    margin-top: -1.3rem;
-    margin-bottom: 2.7rem; }
-  .modal__button {
-    align-self: flex-end;
-    padding: 1.6rem 4.4rem; }
+    align-items: start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 90%;
+    height: 100%; }
+    .feedback__form__button {
+      margin-top: 1.3rem; }
+  .feedback__label {
+    display: block;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    font-weight: 300;
+    line-height: 1.17rem;
+    margin-bottom: 0.875rem; }
+  .feedback__input {
+    width: 100%;
+    padding-bottom: 5px;
+    border: none;
+    border-bottom: 1px solid #939292;
+    background: transparent; }
+    .feedback__input::-webkit-input-placeholder {
+      color: #38393b;
+      font-size: 1.125rem;
+      font-weight: 300;
+      line-height: 2.187rem; }
+    .feedback__input::-moz-placeholder {
+      color: #38393b;
+      font-size: 1.125rem;
+      font-weight: 300;
+      line-height: 2.187rem; }
+    .feedback__input:-ms-input-placeholder {
+      color: #38393b;
+      font-size: 1.125rem;
+      font-weight: 300;
+      line-height: 2.187rem; }
+    .feedback__input::-ms-input-placeholder {
+      color: #38393b;
+      font-size: 1.125rem;
+      font-weight: 300;
+      line-height: 2.187rem; }
+    .feedback__input::placeholder {
+      color: #38393b;
+      font-size: 1.125rem;
+      font-weight: 300;
+      line-height: 2.187rem; }
+  .feedback__input-group {
+    position: relative;
+    width: 100%;
+    margin-bottom: 1.56rem; }
+
+ef {
+  position: absolute;
+  color: #2c2c2d;
+  font-size: 0.8rem;
+  bottom: 0;
+  right: 0; }
 
 footer {
   background: #fff url("../img/footer-bg.png") no-repeat center/cover;
@@ -863,7 +890,7 @@ footer {
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   align-items: center;
   justify-content: center; }
@@ -935,6 +962,13 @@ footer {
   .col-30 {
     width: 100%;
     flex-basis: 50%; }
+  .col-50 {
+    width: 100%;
+    flex-basis: 100%; }
+    .col-50__primary {
+      background: #ff5a3c;
+      padding: 3rem;
+      margin-top: 3rem; }
   .col-30__services {
     width: 100%;
     flex-basis: 50%; }
@@ -951,7 +985,15 @@ footer {
   .video__play {
     position: absolute;
     margin-top: 25%;
-    margin-left: 43%; } }
+    margin-left: 43%; }
+  .feedback {
+    background: #fff;
+    padding-bottom: 0; }
+    .feedback__title {
+      margin: auto;
+      margin-bottom: 2rem; }
+    .feedback__description {
+      justify-content: center; } }
 
 @media screen and (max-width: 760px) {
   .container {
